--- a/maintenance/jsduck/eg-iframe.html
+++ b/maintenance/jsduck/eg-iframe.html
@@ -48,7 +48,8 @@
 	<script src="modules/src/startup/mediawiki.requestIdleCallback.js"></script>
 	<script src="modules/lib/jquery/jquery.js"></script>
 	<script src="modules/src/mediawiki.base/mediawiki.base.js"></script>
-	<script src="modules/src/mediawiki.base/mediawiki.errorLogger.js"></script>
+	<script src="modules/src/mediawiki.base/log.js"></script>
+	<script src="modules/src/mediawiki.base/errorLogger.js"></script>
 	<script src="modules/lib/oojs/oojs.jquery.js"></script>
 	<script src="modules/lib/ooui/oojs-ui-core.js"></script>
 	<script src="modules/lib/ooui/oojs-ui-widgets.js"></script>
